GpResControls: fix tabs overflow styles

--- a/src/assets/less/components/gp-results-controls.less
+++ b/src/assets/less/components/gp-results-controls.less
@@ -56,13 +56,21 @@
 				justify-content: center;
 				height: 100%;
 				width: 50%;
-				color: #9b9ba6;
-				font-size: 14px;
-				font-weight: 400;
-				line-height: 20px;
 				padding: 0 16px;
 				cursor: pointer;
 				user-select: none;
+
+				&_text {
+					width: 100%;
+					color: #9b9ba6;
+					font-size: 14px;
+					font-weight: 400;
+					line-height: 20px;
+					white-space: nowrap;
+					overflow: hidden;
+					text-overflow: ellipsis;
+					text-align: center;
+				}
 
 				@media (min-width: @screen-sm-min) {
 					width: auto;
@@ -73,7 +81,9 @@
 				}
 
 				&.active {
-					color: #17233a;
+					.content-wrapper_tabs_tab_text {
+						color: #17233a;
+					}
 
 					.active-tab-bar {
 						display: inline-flex;
